Board Scrollbar tasks fixed
Please check for what happens on page board when you make changes in the class main.

--- a/styles/board.css
+++ b/styles/board.css
@@ -31,6 +31,10 @@
   flex-grow: 1;
 }
 
+.flex-1 {
+  flex: 1;
+}
+
 .title {
   width: 100%;
 }
@@ -92,12 +96,6 @@
   border: #2a3647 1px solid;
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
 .columns {
   display: flex;
   justify-content: space-between;
@@ -112,6 +110,7 @@ main {
   justify-content: space-between;
   align-items: center;
   width: 252px;
+  margin: 0 12px;
 }
 
 .title-column span {
@@ -119,7 +118,6 @@ main {
   font-size: 20px;
   line-height: 24px;
   color: #2a3647;
-  padding-left: 8px;
 }
 
 .title-column button {
@@ -137,14 +135,13 @@ main {
   width: 252px;
   flex-direction: column;
   gap: 24px;
-  border-radius: 24px;
-  min-height: fit-content;
+  max-height: 50vh;
+  overflow-y: auto;
+
 }
 
 .empty-task {
-  width: 100%;
   height: 48px;
-  border-radius: 10px;
   gap: 10px;
   background-color: #e7e7e7;
   border-radius: 10px;
@@ -153,6 +150,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 12px;
 }
 
 .empty-task span {
@@ -172,6 +170,7 @@ main {
   flex-direction: column;
   cursor: pointer;
   height: fit-content;
+  margin: 12px;
 }
 
 .category {
