--- a/styles/board_card_detail.css
+++ b/styles/board_card_detail.css
@@ -71,19 +71,6 @@
   }
 }
 
-.reverse-animation {
-  animation: myfirst-reverse 250ms backwards;
-}
-
-@keyframes myfirst-reverse {
-  0% {
-    left: 50%;
-  }
-  100% {
-    left: 0%;
-  }
-}
-
 
 .card-detail-header {
   display: flex;
